change fixes and detail product page v3

--- a/detail-product-small.html
+++ b/detail-product-small.html
@@ -179,21 +179,23 @@
             </h1>
             <div class="detail-product_sm-price">
               <div class="detail-product_sm-price__num">
-                <div class="detail-product_sm-price__num-cur">
-                  94 050 000 ₽
+                <div class="detail-product_sm-price__num-cur" data-price-rub="94050000" data-price-usd="1000000"
+                  data-price-eur="920000">
+                  94 050 000 ₽
                 </div>
-                <div class="detail-product_sm-price__num-old">
-                  950 000 ₽/м2
+                <div class="detail-product_sm-price__num-old" data-price-rub="950000" data-price-usd="12000"
+                  data-price-eur="11000">
+                  950 000 ₽/м²
                 </div>
               </div>
               <div class="detail-product_sm-price__currencies">
-                <button type="button" class="detail-product_sm-price__currency active">
+                <button type="button" class="detail-product_sm-price__currency active" data-currency="rub">
                   ₽
                 </button>
-                <button type="button" class="detail-product_sm-price__currency">
+                <button type="button" class="detail-product_sm-price__currency" data-currency="usd">
                   $
                 </button>
-                <button type="button" class="detail-product_sm-price__currency">
+                <button type="button" class="detail-product_sm-price__currency" data-currency="eur">
                   €
                 </button>
               </div>
@@ -387,7 +389,7 @@
         <div class="splide similar-slider">
           <div class="splide__track">
             <ul class="splide__list similar-items">
-               <li class="splide__slide catalog-item">
+              <li class="splide__slide catalog-item">
                 <a href="javascript:void(0)">
                   <div class="catalog-item__image">
                     <div class="splide catalog-images__slider">
@@ -956,9 +958,6 @@
                 </a>
               </li>
             </ul>
-            <a href="javascript:void(0)" class="similar-show__more">
-              Показать еще
-            </a>
           </div>
         </div>
       </div>
@@ -1535,9 +1534,6 @@
                 </a>
               </li>
             </ul>
-            <a href="javascript:void(0)" class="similar-show__more">
-              Показать еще
-            </a>
           </div>
         </div>
       </div>
