homepage homepage adaptive

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               </div>
             </div>
           </div>
-          <div class="mainscreen-hp__slider">
+          <div class="mainscreen-hp__slider" data-move-target=".mainscreen-hp__description" data-move-break="992">
             <div id="slider-wrapper__hp" class="slider-wrapper__hp">
               <!-- Большой слайдер -->
               <div id="main-slider__hp" class="splide main-slider__hp">
@@ -485,7 +485,8 @@
                   недвижимости
                 </div>
               </div>
-              <a href="javascript:void(0)" class="all-projects">
+              <a href="javascript:void(0)" class="all-projects" data-move-target=".projects-hp__left-info h2"
+                data-move-break="992">
                 <span>
                   Смотреть все
                 </span>
@@ -1398,6 +1399,7 @@
     </section>
   </main>
   <footer>
+    <div class="overlay"></div>
     <div class="container">
       <div class="footer-inner">
         <div class="footer-top">
