homepage remove nahui slider tabov rotoriy ya dolgo dolgo ebalsya delat v3

--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,27 @@
                           пользу
                         </span>
                       </li>
+                      <li class="splide__slide hp-slider__slide">
+                        <p>
+                          Мы сделали метры разумными
+                        </p>
+                        <span>
+                          Пространство квартир максимально продумано: функциональные планировки и только полезные метры.
+                          Никаких длинных узких коридоров и темных углов. Больше площадь жилых комнат, удобное
+                          зонирование, места для гардеробных и постирочных — каждый квадратный метр квартиры приносит
+                          пользу
+                        </span>
+                      </li>
+                      <li class="splide__slide hp-slider__slide">
+                        <p>
+                          Мы сделали метры разумными
+                        </p>
+                        <span>
+                          Пространство квартир максимально продумано: функциональные планировки и только полезные метры.
+                          Никаких длинных узких коридоров и темных углов. Больше площадь жилых комнат, удобное
+                          зонирование, места для гардеробных и постирочных — каждый квадратный метр квартиры приносит
+                          пользу
+                        </span>
                       </li>
                     </ul>
                   </div>
