--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,39 @@
   </main>
   <footer>
     <div class="overlay"></div>
+    <div class="modal">
+      <div class="modal-inner">
+        <button class="close-modal">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M2.23242 20.8516L10.7314 12.3525L2.23242 3.85352L3.64648 2.43945L12.1455 10.9385L20.6445 2.43945L22.0586 3.85352L13.5596 12.3525L22.0586 20.8516L20.6445 22.2656L12.1455 13.7666L3.64648 22.2656L2.23242 20.8516Z"
+              fill="#242220" fill-opacity="0.4" />
+          </svg>
+        </button>
+        <div class="modal-content">
+          <div class="modal-content__info">
+            <h2>
+              Получите <span>бесплатную консультацию</span> эксперта
+            </h2>
+            <p>
+              Расскажем, как решить вашу задачу — подберём оптимальное решение и ответим на вопросы
+            </p>
+          </div>
+
+          <div class="modal-form">
+            <form action="">
+              <div class="input-wrap">
+                <input type="text" name="name" placeholder="Введите имя">
+              </div>
+              <div class="input-wrap">
+                <input type="tel" name="tel" placeholder="Введите номер телефона">
+              </div>
+              <input type="submit" class="submit" value="Отправить">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="footer-inner">
         <div class="footer-top">
