not last child margin top form

--- a/index.html
+++ b/index.html
@@ -1167,10 +1167,10 @@
           <div class="modal-form">
             <form action="">
               <div class="input-wrap">
-                <input type="text" name="name" placeholder="Введите имя">
+                <input type="text" name="name" placeholder="Введите имя" required>
               </div>
               <div class="input-wrap">
-                <input type="tel" name="tel" placeholder="Введите номер телефона">
+                <input type="tel" name="tel" placeholder="Введите номер телефона" required>
               </div>
               <input type="submit" class="submit" value="Отправить">
               <div class="agreed-col">
