--- a/detail-product-small.html
+++ b/detail-product-small.html
@@ -225,7 +225,7 @@
                     fill="#242220" />
                 </svg>
               </a>
-              <a href="javascript:void(0)" class="show-gallery">
+              <a href="javascript:void(0)" class="show-gallery" id="show-gallery">
                 <span>
                   Открыть галерею
                 </span>
@@ -1538,6 +1538,17 @@
         </div>
       </div>
     </section>
+    <div class="page-gallery" style="display:none;">
+      <a href="./assets/img/slide2.png" data-fancybox="page-gallery">
+        <img src="./assets/img/slide2.png" alt="img">
+      </a>
+      <a href="./assets//img/slide2.png" data-fancybox="page-gallery">
+        <img src="./assets/img/slide2.png" alt="img">
+      </a>
+      <a href="./assets/img/slide2.png" data-fancybox="page-gallery">
+        <img src="./assets/img/slide2.png" alt="img">
+      </a>
+    </div>
   </main>
   <footer>
     <div class="overlay"></div>
